# miuchan.github.io

./: .gitignore  LICENSE  README.md  index.html  next.config.mjs  package.json  pyproject.toml
.github/workflows/: formal-verification.yml
Friends/: index.html
app/: layout.jsx  page.jsx
app/blog/: blog.css  page.jsx
archives/: index.html
archives/2015/: index.html
assets/: main.css  main.js
assets/css/: styles.css
assets/js/: friends-data.js  friends-page.js  main.js
blog/: ctc-convex-optimization.html  game-of-life-convex-optimization.html  index.html  internet-of-everything-design.html
blog/Friends/: index.html
blog/archives/: index.html
demo/agi-asi-reaction-chamber/: chamber.js  index.html
demo/ambient-sketch/: index.html  main.js  style.css
demo/bchan-pchan-synchrony/: index.html  style.css  synchrony.js
demo/branch-prediction/: index.html  style.css
demo/ctc/: ctc.js  style.css
demo/ctc-optimizer/: index.html  optimizer.js  style.css
demo/featherlight-fixed-point-recursion/: index.html
demo/neutrino-catalysis/: catalysis.js
docs/: chtholly-hououin-temporal-synchrony-lab.md  computational-singularity-proof.md  micro-incentive-bridge-lab.md  nanotube_bridge_lab_plan.md  originlab-origin-suite-analysis.md  pinduoduo-distributed-automata-dynamics-center.md  quantum-microtubules-in-neurons.md  slam-lidar-fixed-point.md  tomoko-yuko-thermal-dual-resonance-lab.md  whole-home-wireless-charging-lab.md
formal/: HelloAya.aya  README.md
friends/: index.html
resume/: index.css  index.html
scripts/: install_aya.sh  run_aya.sh
(+206 files in other folders)
