[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "aya-engine"
version = "0.1.0"
description = "Lightweight Aya engine for structural validation of Aya source files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Miu Nakamura" }
]
keywords = ["aya", "formal methods", "verification"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://miuchan.github.io"
Repository = "https://github.com/miuchan/miuchan.github.io"
"Bug Tracker" = "https://github.com/miuchan/miuchan.github.io/issues"

[project.scripts]
aya = "tools.aya.__main__:main"

[tool.hatch.version]
path = "tools/aya/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.build.targets.sdist]
include = [
  "tools/aya",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
